[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/objects/FloorRise.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/maps/welcome/WelcomeMap.gd" type="Script" id=2]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/rooms/SmallRoom.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ui/WelcomeScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/maps/welcome/WelcomeMap.lmbake" type="BakedLightmapData" id=7]

[node name="WelcomeMap" type="Spatial"]
script = ExtResource( 2 )

[node name="Environment" type="Spatial" parent="."]

[node name="SmallRoom" parent="Environment" instance=ExtResource( 4 )]

[node name="FloorRise" parent="Environment" instance=ExtResource( 1 )]

[node name="OmniLight" type="OmniLight" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17, 0 )
light_size = 1.0
light_bake_mode = 2
shadow_enabled = true
omni_range = 17.0

[node name="BakedLightmap" type="BakedLightmap" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
extents = Vector3( 11, 11, 11 )
light_data = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="WelcomeScreen" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.7, -1.6 )
screen_size = Vector2( 2.048, 1.2 )
viewport_size = Vector2( 1024, 600 )
unshaded = true
scene = ExtResource( 5 )
update_mode = 2
throttle_fps = 5.0

[connection signal="fade_complete" from="Player" to="." method="_on_Player_fade_complete"]
